# UCL-PHAS0100-CandamirTilesExample1

./: CMakeLists.txt  README.md  appveyor.yml
include/: all_rounder.hpp  bat.hpp  batter.hpp  bowler.hpp  coach.hpp  cricket.hpp  cricketer.hpp  equipment.hpp  team.hpp  wicket_keeper.hpp
src/: CMakeLists.txt  all_rounder.cpp  bat.cpp  batter.cpp  bowler.cpp  coach.cpp  cricket.cpp  cricketer.cpp  equipment.cpp  main.cpp  team.cpp  wicket_keeper.cpp
